codex-rs/tui/src/status/snapshots/codex_tui__status__tests__status_snapshot_shows_active_user_defined_profile.snap
---
source: tui/src/status/tests.rs
expression: sanitized
---
/status

╭─────────────────────────────────────────────────────────────────╮
│  >_ Astral-Code (v0.0.0)                                        │
│                                                                 │
│  Model:            gpt-5.1-codex-max                            │
│  Model provider:   Astral                                       │
│  Directory: [[workspace]]                                       │
│  Permissions:      Profile locked (read-only, Ask for approval) │
│  Agents.md:        <none>                                       │
│                                                                 │
│  Token usage:      0 total  (0 input + 0 output)                │
│  Limits:           data not available yet                       │
╰─────────────────────────────────────────────────────────────────╯
